--- a/src/widgets/ErrorPage/ui/ErrorPage.module.scss
+++ b/src/widgets/ErrorPage/ui/ErrorPage.module.scss
@@ -1,8 +1,8 @@
-.PageError {
+.ErrorPage {
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
 }
